
[package]
name = "fractal"
version = "0.1.0"
authors = ["Anders Musikka <you@example.com>"]

[dependencies]
rand="*"
maplit="*"
ansi_term="*"
fuss = "0.2.0"
image="*"
glium={ path = "/home/anders/glium" }
nalgebra="0.13.0"
time="*"
fnv="*"
ordermap="*"
pancurses = "0.13"
fftw="0.4"
serde="1.0.28"
serde_derive="1.0.28"
bincode="*"
savefile="*"
savefile-derive="*"

